# bpt-core

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  vcpkg.json
.github/workflows/: ci-mapping.yml  ci.yml  docs.yml  release.yml
bifrost/protocol/: CMakeLists.txt
bpt-analytics/: BUILD  README.md
bpt-analytics/config/: bpt-analytics.qa-hyperliquid.toml  bpt-analytics.qa-okx.toml  tyr.qa-okx.toml
bpt-analytics/src/: main.cpp
bpt-app/: BUILD  CMakeLists.txt
bpt-app/include/bpt_app/: app.h  base_settings.h
bpt-app/src/: base_settings.cpp
bpt-app/tests/unit/: test_base_settings.cpp
bpt-backtester/: BUILD  README.md
bpt-backtester/config/: bpt-backtester.hl-tape-xmr.toml  bpt-backtester.hl-tape-zec.toml  bpt-backtester.hl-tape.toml  bpt-backtester.qa-okx.toml
bpt-backtester/scripts/: download_okx_orderbook.py
bpt-backtester/src/: CMakeLists.txt  main.cpp
bpt-backtester/tests/: CMakeLists.txt
bpt-backtester/tools/: dl_smoke.cpp  info_smoke.cpp
bpt-book/: BUILD
bpt-book/config/: book.qa-hyperliquid.toml
bpt-book/src/: main.cpp
bpt-bridge/: BUILD  README.md
bpt-bridge/src/: main.cpp
bpt-canon/: BUILD
bpt-canon/python/: BUILD
bpt-canon/src/: canon_sbe.cpp  canon_writer.cpp  ingest_okx_l2_main.cpp  ingest_okx_trades_main.cpp  merge_main.cpp  replay_main.cpp
bpt-common/: BUILD  CMakeLists.txt
bpt-common/src/: env.cpp
bpt-console/frontend/: README.md
bpt-console/scripts/: live_run.sh  paper_run.sh  smoke_test.sh  switch.sh
bpt-features/: BUILD
bpt-features/src/: ewma.cpp  hurst.cpp  ofi_calculator.cpp  regime_detector.cpp
bpt-features/tests/: test_ewma.cpp  test_fill_prob.cpp  test_ofi_calculator.cpp  test_regime_classifier.cpp  test_regime_detector.cpp
bpt-md-gateway/: BUILD  README.md
bpt-md-gateway/config/: bpt-md-gateway.backtest.toml  bpt-md-gateway.dev-deribit.toml  bpt-md-gateway.hyperliquid.toml  bpt-md-gateway.qa-deribit.toml  bpt-md-gateway.qa-hyperliquid.toml  bpt-md-gateway.qa-okx.toml  huginn.qa-okx.toml
bpt-md-gateway/diagrams/: at-a-glance.d2  detailed-flow.d2
bpt-md-gateway/src/: main.cpp
bpt-md-recorder/config/: bpt-md-recorder.recording-hl.toml
bpt-md-recorder/src/: main.cpp
bpt-order-gateway/: BUILD  README.md
bpt-order-gateway/config/: bpt-order-gateway.backtest.toml  bpt-order-gateway.dev-deribit.toml  bpt-order-gateway.hyperliquid.toml  (+4 more)
bpt-pms/: BUILD  README.md
bpt-pricer/: BUILD  README.md
bpt-radar/: BUILD  README.md
bpt-refdata/: BUILD  README.md
bpt-research/: .gitignore  README.md  loaders.py
bpt-strategy/: BUILD  README.md
bpt-tape/: BUILD  README.md
bpt-universe/: .gitignore  pyproject.toml
bpt-universe/bpt_universe/: cli.py  diff.py  features.py  io.py  report.py  scoring.py
bpt-universe/tests/: conftest.py  test_diff.py  test_features.py  test_scoring.py
deploy/: deploy.sh  generate-units-dev.sh  generate-units.sh  package-release.sh  switch-env.sh  sync-config.sh
docs/: CPP_STYLE.md  Doxyfile  architecture.md  backlog.md  header.html  service-anatomy.md
fenrir/: CMakeLists.txt
heimdall/: CMakeLists.txt
huginn/: CMakeLists.txt
huginn/src/: CMakeLists.txt  main.cpp
huginn/src/adapter/binance/: binance_adapter.cpp  binance_parser.cpp
huginn/src/adapter/common/: adapter_base.cpp  subscription_map.cpp
huginn/src/adapter/deribit/: deribit_adapter.cpp  deribit_parser.cpp
huginn/src/adapter/hyperliquid/: hyperliquid_adapter.cpp  hyperliquid_parser.cpp
huginn/src/adapter/okx/: okx_adapter.cpp  okx_parser.cpp
huginn/src/app/: huginn_app.cpp
huginn/src/config/: loader.cpp
huginn/src/md/: md_encoder.cpp  md_validator.cpp
huginn/src/messaging/: ack_publisher.cpp  funding_rate_publisher.cpp  md_publisher.cpp
huginn/src/metrics/: metrics.cpp
huginn/src/subscription/: subscription_manager.cpp
huginn/tests/: CMakeLists.txt
huginn/tests/component/: fake_ack_publisher.h  fake_md_publisher.h  test_binance_adapter.cpp  test_deribit_adapter.cpp  test_hyperliquid_adapter.cpp  test_okx_adapter.cpp  test_subscription_manager.cpp
huginn/tests/unit/: test_adapters.cpp  test_md_validator.cpp  test_sbe_codecs.cpp
infra/: README.md
jormungandr/: CMakeLists.txt
jormungandr/src/: CMakeLists.txt  main.cpp
jormungandr/src/app/: jormungandr_app.cpp
jormungandr/src/clock/: clock_master.cpp
jormungandr/src/config/: loader.cpp
jormungandr/src/data/: data_loader.cpp
jormungandr/src/exchange/: binance_md_server.cpp  binance_order_server.cpp  okx_md_server.cpp  okx_order_server.cpp
jormungandr/src/matching/: matching_engine.cpp
jormungandr/src/messaging/: backtest_ack_subscriber.cpp  backtest_control_publisher.cpp
jormungandr/src/results/: results_collector.cpp
jormungandr/tests/: CMakeLists.txt
jormungandr/tests/unit/: test_config.cpp  test_data_loader.cpp  test_matching_engine.cpp  test_results_collector.cpp
messages/: BUILD  CMakeLists.txt  README.md
monitoring/: .gitignore  Makefile  README.md  docker-compose.yml  prometheus.yml  requirements.txt
muninn/: CMakeLists.txt
muninn/tests/: CMakeLists.txt  main_test.cpp  test_binance_parser.cpp  test_config.cpp  test_hyperliquid_parser.cpp  test_instrument_mapping.cpp  test_instrument_registry.cpp  test_okx_parser.cpp  test_sbe_codecs.cpp
scripts/: backtest.sh  build-public-mirror.sh  check_recording_health.sh  cleanup-stale-logs.sh  dl_smoke.py  down.sh  flatten_hl_positions.py  live-hl.sh  live.sh  mdlog_to_parquet.py  paper.sh  rotate_recordings.sh  stack-testnet.sh  stack.sh  sweep.py  sync_recordings.sh  sync_tape_to_s3.sh  test-hl.sh  up.sh
site/: README.md  mkdocs.yml  requirements.txt
surtr/: CMakeLists.txt
surtr/src/: CMakeLists.txt  main.cpp
surtr/src/app/: surtr_app.cpp
surtr/src/config/: config.cpp
surtr/src/md/: md_subscriber.cpp
surtr/src/messaging/: status_publisher.cpp  vol_surface_publisher.cpp
surtr/src/pricing/: black_scholes.cpp  forward_curve.cpp  iv_solver.cpp
surtr/src/refdata/: refdata_subscriber.cpp
surtr/src/surface/: surface_builder.cpp
(+1297 files in other folders)
